--- a/centeractive.koia.e2etest.yml
+++ b/centeractive.koia.e2etest.yml
@@ -59,8 +59,8 @@ steps:
   - task: PowerShell@2
     inputs:
       targetType: 'inline'
-      script: 'ng serve'
-    displayName: "run Cypress tests"
+      script: 'npm start'
+    displayName: "start the Koia application"
 
   - task: PowerShell@2
     inputs:
