--- a/centeractive.koia.e2etest.yml
+++ b/centeractive.koia.e2etest.yml
@@ -65,9 +65,14 @@ steps:
   - task: PowerShell@2
     inputs:
       targetType: "inline"
-      script: "npm start &"
+      script: "npm start &" 
     displayName: "start the Koia application"
-
+     
+  - task: Delay@1
+    inputs:
+      delayForMinutes: '4'
+    displayName: "start the Koia application"
+     
   - task: PowerShell@2
     inputs:
       targetType: "inline"
