--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "test-debug": "ng test --browsers=ChromeDebug",
     "test-headless": "ng test --watch=true --sourceMap=true --browsers=ChromeHeadless",
     "postinstall": "ngcc --properties es2015 browser module main --first-only --create-ivy-entry-points",
-    "cypress": "npx cypress open",
+    "cypress": "npx cypress open --config-file cypress/config/local.json",
     "report": "npx cypress run --record --key fd9ecba7-bfba-430e-afda-d0b5d2f7e3d6 --reporter cypress-multi-reporters"
   },
   "private": true,
