--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "test-headless": "ng test --watch=true --sourceMap=true --browsers=ChromeHeadless",
     "postinstall": "ngcc --properties es2015 browser module main --first-only --create-ivy-entry-points",
     "cypress": "npx cypress open --config-file cypress/config/local.json",
-    "report": "npx cypress run --record --key fd9ecba7-bfba-430e-afda-d0b5d2f7e3d6 --reporter cypress-multi-reporters"
+    "cypress-run-report": "npx cypress run --record --key fd9ecba7-bfba-430e-afda-d0b5d2f7e3d6 --reporter cypress-multi-reporters",
+    "e2e": "start-server-and-test start http-get://localhost:4200 cypress-run-report"
   },
   "private": true,
   "dependencies": {
@@ -99,6 +100,7 @@
     "mochawesome-report-generator": "^6.2.0",
     "ng-packagr": "~13.3.1",
     "puppeteer": "~14.2.0",
+    "start-server-and-test": "^1.14.0",
     "ts-node": "~9.1.1",
     "tslint": "~6.1.3",
     "typescript": "~4.6.2"
