--- a/centeractive.koia.e2etest.yml
+++ b/centeractive.koia.e2etest.yml
@@ -65,24 +65,8 @@ steps:
   - task: PowerShell@2
     inputs:
       targetType: "inline"
-      script: "npm start &"   
-    displayName: "start the Koia application"
-     
-  - task: PowerShell@2
-    inputs:
-      targetType: "inline"
-      script: "./node_modules/cypress/bin/cypress run  --record --key fd9ecba7-bfba-430e-afda-d0b5d2f7e3d6"
-      errorActionPreference: "continue"
-    continueOnError: true
-    displayName: "run Cypress tests"
-
-  - task: PublishTestResults@2
-    inputs:
-      testResultsFormat: "JUnit"
-      testResultsFiles: "**/reports/junit/*.*"
-      mergeTestResults: true
-    enabled: true
-    displayName: "publish Cypress tests"
+      script: "npx e2e"
+    displayName: "start and test the Koia application"
 
   - task: PowerShell@2
     inputs:
