--- a/centeractive.koia.e2etest.yml
+++ b/centeractive.koia.e2etest.yml
@@ -57,16 +57,15 @@ steps:
     displayName: "run CouchDB in Docker container"
 
   # build product and publish artifact
-  - script: |
-      npx ng build --prod
-    failOnStderr: false
-    displayName: "build koia product"
+  # - script: |
+  #     npx ng build
+  #   failOnStderr: false
+  #   displayName: "build koia product"
 
-  - task: PowerShell@2
-    inputs:
-      targetType: "inline"
-      script: "npx e2e"
-    displayName: "start and test the Koia application"
+  - script: |
+      npx e2e
+    failOnStderr: false
+    displayName: "build, start and test the Koia application"
 
   - task: PowerShell@2
     inputs:
