--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "postinstall": "ngcc --properties es2015 browser module main --first-only --create-ivy-entry-points",
     "cypress": "npx cypress open --config-file cypress/config/local.json",
     "cypress-run-report": "npx cypress run --record --key fd9ecba7-bfba-430e-afda-d0b5d2f7e3d6 --reporter cypress-multi-reporters",
-    "e2e": "start-server-and-test start http-get://localhost:4200 cypress-run-report"
+    "start-server": "angular-http-server --path ./dist/koia -p 4200",
+    "e2e": "start-server-and-test start-server http-get://localhost:4200 cypress-run-report"
   },
   "private": true,
   "dependencies": {
