--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "@types/jasmine": "~4.0.3",
     "@types/jasminewd2": "~2.0.10",
     "@types/node": "~14.18.20",
+    "angular-http-server": "^1.10.1",
     "codelyzer": "~6.0.2",
     "copyfiles": "~2.4.1",
     "cross-var": "~1.1.0",
