--- a/centeractive.koia.e2etest.yml
+++ b/centeractive.koia.e2etest.yml
@@ -82,7 +82,7 @@ steps:
   - task: PowerShell@2
     inputs:
       targetType: "inline"
-      script: |
+      script:
         Write-Host "Show all folder content"
         Get-ChildItem -Name -Recurse -Force
     displayName: "Show all folder content"
