--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "test-headless": "ng test --watch=true --sourceMap=true --browsers=ChromeHeadless",
     "postinstall": "ngcc --properties es2015 browser module main --first-only --create-ivy-entry-points",
     "cypress": "npx cypress open --config-file cypress/config/local.json",
-    "cypress-run-report": "npx cypress run --record --key fd9ecba7-bfba-430e-afda-d0b5d2f7e3d6 --reporter cypress-multi-reporters",
+    "cypress-run-report": "npx cypress run --browser chrome --record --key fd9ecba7-bfba-430e-afda-d0b5d2f7e3d6 --reporter cypress-multi-reporters",
     "start-server": "angular-http-server --path ./dist/koia -p 4200",
     "e2e": "start-server-and-test start-server http-get://localhost:4200 cypress-run-report",
     "report-merge": "npx junit-merge -d cypress/reports/junit -o ./cypress/reports/junit/all.xml"
