--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@angular/router": "~13.3.11",
     "@types/d3": "~7.4.0",
     "@types/file-saver": "~2.0.5",
+    "@types/luxon": "^3.0.1",
     "@types/pouchdb": "~6.4.0",
     "angular-resizable-element": "~5.0.0",
     "chart.js": "~3.8.0",
@@ -49,6 +50,7 @@
     "jquery": "~3.6.0",
     "jquery-ui-dist": "~1.13.1",
     "lodash": "^4.17.21",
+    "luxon": "^3.0.4",
     "moment": "~2.29.3",
     "oboe": "~2.1.5",
     "papaparse": "~5.3.2",
