--- a/package.json
+++ b/package.json
@@ -21,18 +21,18 @@
   "private": true,
   "dependencies": {
     "@angular-slider/ngx-slider": "~2.0.4",
-    "@angular/animations": "~13.3.11",
-    "@angular/cdk": "~13.3.9",
-    "@angular/common": "~13.3.11",
-    "@angular/compiler": "~13.3.11",
-    "@angular/core": "~13.3.11",
-    "@angular/flex-layout": "~13.0.0-beta.38",
-    "@angular/forms": "~13.3.11",
-    "@angular/material": "~13.3.9",
-    "@angular/platform-browser": "~13.3.11",
-    "@angular/platform-browser-dynamic": "~13.3.11",
-    "@angular/platform-server": "~13.3.10",
-    "@angular/router": "~13.3.11",
+    "@angular/animations": "^14.2.5",
+    "@angular/cdk": "^13.3.9",
+    "@angular/common": "^14.2.5",
+    "@angular/compiler": "^14.2.5",
+    "@angular/core": "^14.2.5",
+    "@angular/flex-layout": "^13.0.0-beta.38",
+    "@angular/forms": "^14.2.5",
+    "@angular/material": "^13.3.9",
+    "@angular/platform-browser": "^14.2.5",
+    "@angular/platform-browser-dynamic": "^14.2.5",
+    "@angular/platform-server": "^14.2.5",
+    "@angular/router": "^14.2.5",
     "@types/d3": "~7.4.0",
     "@types/file-saver": "~2.0.5",
     "@types/luxon": "^3.0.1",
@@ -65,10 +65,10 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~13.3.7",
-    "@angular/cli": "~13.3.7",
-    "@angular/compiler-cli": "~13.3.11",
-    "@angular/localize": "~13.3.11",
+    "@angular-devkit/build-angular": "^14.2.5",
+    "@angular/cli": "^14.2.5",
+    "@angular/compiler-cli": "^14.2.5",
+    "@angular/localize": "^14.2.5",
     "@types/jasmine": "~4.0.3",
     "@types/jasminewd2": "~2.0.10",
     "@types/node": "~14.18.20",
@@ -87,7 +87,7 @@
     "karma-jasmine-html-reporter": "~2.0.0",
     "karma-junit-reporter": "~2.0.1",
     "karma-spec-reporter": "~0.0.34",
-    "ng-packagr": "~13.3.1",
+    "ng-packagr": "^14.2.1",
     "puppeteer": "~14.2.0",
     "ts-node": "~9.1.1",
     "tslint": "~6.1.3",
