updated different libraries

--- a/package.json
+++ b/package.json
@@ -13,22 +13,22 @@
     "build": "ng build",
     "build:prod:tomcat": "ng build --configuration production --base-href /koia/",
     "build:prod:apache": "ng build --configuration production",
-    "test": "ng test --watch=true --sourceMap=true --browsers=ChromeHeadless --code-coverage=true",
+    "test": "ng test --watch=true --source-map=true --browsers=ChromeHeadless --code-coverage=true",
     "test-debug": "ng test --browsers=ChromeDebug",
-    "test-headless": "ng test --watch=true --sourceMap=true --browsers=ChromeHeadless",
+    "test-headless": "ng test --watch=true --source-map=true --browsers=ChromeHeadless",
     "postinstall": "ngcc --properties es2015 browser module main --first-only --create-ivy-entry-points"
   },
   "private": true,
   "dependencies": {
     "@angular-slider/ngx-slider": "~2.0.4",
     "@angular/animations": "^14.2.5",
-    "@angular/cdk": "^13.3.9",
+    "@angular/cdk": "^14.2.4",
     "@angular/common": "^14.2.5",
     "@angular/compiler": "^14.2.5",
     "@angular/core": "^14.2.5",
-    "@angular/flex-layout": "^13.0.0-beta.38",
+    "@angular/flex-layout": "^14.0.0-beta.40",
     "@angular/forms": "^14.2.5",
-    "@angular/material": "^13.3.9",
+    "@angular/material": "^14.2.4",
     "@angular/platform-browser": "^14.2.5",
     "@angular/platform-browser-dynamic": "^14.2.5",
     "@angular/platform-server": "^14.2.5",
@@ -37,18 +37,18 @@
     "@types/file-saver": "~2.0.5",
     "@types/luxon": "^3.0.1",
     "@types/pouchdb": "~6.4.0",
-    "angular-resizable-element": "~5.0.0",
-    "chart.js": "~3.8.0",
+    "angular-resizable-element": "~6.0.0",
+    "chart.js": "~3.9.1",
     "chartjs-adapter-moment": "~1.0.0",
-    "chartjs-plugin-datalabels": "~2.0.0",
-    "core-js": "~3.22.8",
-    "d3": "~7.4.4",
+    "chartjs-plugin-datalabels": "~2.1.0",
+    "core-js": "~3.25.5",
+    "d3": "~7.6.1",
     "d3fc-sample": "~3.0.5",
-    "data-forge": "~1.9.5",
+    "data-forge": "~1.9.6",
     "extract-zip": "~2.0.1",
     "file-saver": "~2.0.5",
-    "jquery": "~3.6.0",
-    "jquery-ui-dist": "~1.13.1",
+    "jquery": "~3.6.1",
+    "jquery-ui-dist": "~1.13.2",
     "lodash": "^4.17.21",
     "luxon": "^3.0.4",
     "moment": "~2.29.3",
@@ -57,33 +57,33 @@
     "pivottable": "~2.23.0",
     "pouchdb": "~7.3.0",
     "pouchdb-find": "~7.3.0",
-    "rxjs": "~7.5.0",
-    "save": "~2.5.0",
+    "rxjs": "~7.5.7",
+    "save": "~2.9.0",
     "save-svg-as-png": "~1.4.17",
     "tslib": "~2.4.0",
     "xlsx": "~0.18.5",
-    "zone.js": "~0.11.4"
+    "zone.js": "~0.11.8"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^14.2.5",
     "@angular/cli": "^14.2.5",
     "@angular/compiler-cli": "^14.2.5",
     "@angular/localize": "^14.2.5",
-    "@types/jasmine": "~4.0.3",
+    "@types/jasmine": "~4.3.0",
     "@types/jasminewd2": "~2.0.10",
     "@types/node": "~14.18.20",
     "codelyzer": "~6.0.2",
     "copyfiles": "~2.4.1",
     "cross-var": "~1.1.0",
-    "jasmine": "~4.1.0",
-    "jasmine-core": "~4.1.1",
+    "jasmine": "~4.4.0",
+    "jasmine-core": "~4.4.0",
     "jasmine-spec-reporter": "~7.0.0",
     "jasminewd2": "~2.2.0",
-    "karma": "~6.3.20",
+    "karma": "~6.4.1",
     "karma-chrome-launcher": "~3.1.1",
     "karma-cli": "~2.0.0",
     "karma-coverage": "~2.2.0",
-    "karma-jasmine": "~5.0.1",
+    "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
     "karma-junit-reporter": "~2.0.1",
     "karma-spec-reporter": "~0.0.34",
