--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -54,7 +54,7 @@ steps:
 
 # perform unit-tets and publish test and code coverage results
 - script: |
-    npx ng test --watch=false --karmaConfig karma.conf.ci.js --code-coverage
+    npx ng test --watch=false --karma-config karma.conf.ci.js --code-coverage
   displayName: 'perform unit tests'    
 
 - task: PublishTestResults@2
