--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -63,7 +63,7 @@ steps:
 
   # build product and publish artifact
   - script: |
-      npx ng build --prod
+      npx ng build --configuration production
     failOnStderr: false
     displayName: "build koia product"
 
