--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -74,7 +74,7 @@ steps:
 
 # build product and publish artifact
 - script: |
-    npx ng build --prod
+    npx ng build --configuration production
   failOnStderr: false    
   displayName: 'build koia product'
 
