--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,8 +7,8 @@
     "declaration": false,
     "moduleResolution": "node",
     "experimentalDecorators": true,
-    "allowSyntheticDefaultImports": true, // required for PouchDB
-    "target": "es2020",
+    "allowSyntheticDefaultImports": true,
+    "target": "ES2022",
     "typeRoots": [
       "node_modules/@types"
     ],
@@ -16,7 +16,8 @@
     "lib": [
       "es2020",
       "dom"
-    ]
+    ],
+    "useDefineForClassFields": false
   },
   "angularCompilerOptions": {
     "strictTemplates": false
