--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "@types/pouchdb": "~6.4.0",
     "angular-resizable-element": "~7.0.2",
     "chart.js": "~4.3.0",
-    "chartjs-adapter-moment": "~1.0.1",
+    "chartjs-adapter-luxon": "^1.3.1",
     "chartjs-plugin-datalabels": "~2.2.0",
     "d3": "~7.8.4",
     "d3fc-sample": "~3.0.5",
