--- a/package.json
+++ b/package.json
@@ -20,17 +20,17 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^18.0.0",
-    "@angular/cdk": "^18.0.0",
-    "@angular/common": "^18.0.0",
-    "@angular/compiler": "^18.0.0",
-    "@angular/core": "^18.0.0",
-    "@angular/forms": "^18.0.0",
-    "@angular/material": "^18.0.0",
-    "@angular/platform-browser": "^18.0.0",
-    "@angular/platform-browser-dynamic": "^18.0.0",
-    "@angular/platform-server": "^18.0.0",
-    "@angular/router": "^18.0.0",
+    "@angular/animations": "^18.0.5",
+    "@angular/cdk": "^18.0.5",
+    "@angular/common": "^18.0.5",
+    "@angular/compiler": "^18.0.5",
+    "@angular/core": "^18.0.5",
+    "@angular/forms": "^18.0.5",
+    "@angular/material": "^18.0.5",
+    "@angular/platform-browser": "^18.0.5",
+    "@angular/platform-browser-dynamic": "^18.0.5",
+    "@angular/platform-server": "^18.0.5",
+    "@angular/router": "^18.0.5",
     "@types/d3": "~7.4.3",
     "@types/file-saver": "~2.0.7",
     "@types/luxon": "^3.4.2",
@@ -46,29 +46,29 @@
     "extract-zip": "~2.0.1",
     "file-saver": "~2.0.5",
     "jquery": "~3.7.1",
-    "jquery-ui-dist": "~1.13.2",
+    "jquery-ui-dist": "~1.13.3",
     "lodash": "^4.17.21",
     "luxon": "^3.4.4",
     "oboe": "~2.1.5",
     "papaparse": "~5.4.1",
     "pivottable": "~2.23.0",
-    "pouchdb": "~8.0.1",
-    "pouchdb-find": "~8.0.1",
+    "pouchdb": "~9.0.0",
+    "pouchdb-find": "~9.0.0",
     "rxjs": "~7.8.1",
     "save": "~2.9.0",
     "save-svg-as-png": "~1.4.17",
-    "tslib": "~2.6.2",
-    "xlsx": "~0.18.5",
-    "zone.js": "~0.14.2"
+    "tslib": "~2.6.3",
+    "xlsx": "https://cdn.sheetjs.com/xlsx-0.20.2/xlsx-0.20.2.tgz",
+    "zone.js": "~0.14.7"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^18.0.1",
-    "@angular/cli": "^18.0.1",
-    "@angular/compiler-cli": "^18.0.0",
-    "@angular/localize": "^18.0.0",
+    "@angular-devkit/build-angular": "^18.0.6",
+    "@angular/cli": "^18.0.6",
+    "@angular/compiler-cli": "^18.0.5",
+    "@angular/localize": "^18.0.5",
     "@types/jasmine": "~5.1.4",
     "@types/jasminewd2": "~2.0.13",
-    "@types/node": "~20.12.12",
+    "@types/node": "~20.14.9",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
     "codelyzer": "^6.0.2",
@@ -88,7 +88,7 @@
     "karma-junit-reporter": "~2.0.1",
     "karma-spec-reporter": "~0.0.36",
     "ng-packagr": "^18.0.0",
-    "puppeteer": "~22.10.0",
+    "puppeteer": "~22.12.1",
     "ts-node": "~10.9.2",
     "typescript": "~5.4.5"
   }
