--- a/package.json
+++ b/package.json
@@ -20,23 +20,24 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^18.0.5",
-    "@angular/cdk": "^18.0.5",
-    "@angular/common": "^18.0.5",
-    "@angular/compiler": "^18.0.5",
-    "@angular/core": "^18.0.5",
-    "@angular/forms": "^18.0.5",
-    "@angular/material": "^18.0.5",
-    "@angular/platform-browser": "^18.0.5",
-    "@angular/platform-browser-dynamic": "^18.0.5",
-    "@angular/platform-server": "^18.0.5",
-    "@angular/router": "^18.0.5",
+    "@angular/animations": "^18.2.13",
+    "@angular/cdk": "^18.2.14",
+    "@angular/common": "^18.2.13",
+    "@angular/compiler": "^18.2.13",
+    "@angular/core": "^18.2.13",
+    "@angular/forms": "^18.02.13",
+    "@angular/material": "^18.2.14",
+    "@angular/platform-browser": "^18.2.13",
+    "@angular/platform-browser-dynamic": "^18.2.13",
+    "@angular/platform-server": "^18.2.13",
+    "@angular/router": "^18.2.13",
+    "@e965/xlsx": "0.20.3",
     "@types/d3": "~7.4.3",
     "@types/file-saver": "~2.0.7",
     "@types/luxon": "^3.4.2",
     "@types/pouchdb": "~6.4.2",
     "angular-resizable-element": "~7.0.2",
-    "chart.js": "~4.4.3",
+    "chart.js": "~4.4.6",
     "chartjs-adapter-luxon": "^1.3.1",
     "chartjs-plugin-datalabels": "~2.2.0",
     "d3": "~7.9.0",
@@ -57,29 +58,28 @@
     "rxjs": "~7.8.1",
     "save": "~2.9.0",
     "save-svg-as-png": "~1.4.17",
-    "tslib": "~2.6.3",
-    "xlsx": "https://cdn.sheetjs.com/xlsx-0.20.2/xlsx-0.20.2.tgz",
-    "zone.js": "~0.14.7"
+    "tslib": "~2.8.1",
+    "zone.js": "~0.14.10"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^18.0.6",
-    "@angular/cli": "^18.0.6",
-    "@angular/compiler-cli": "^18.0.5",
-    "@angular/localize": "^18.0.5",
-    "@types/jasmine": "~5.1.4",
+    "@angular-devkit/build-angular": "^18.2.12",
+    "@angular/cli": "^18.2.12",
+    "@angular/compiler-cli": "^18.2.13",
+    "@angular/localize": "^18.2.13",
+    "@types/jasmine": "~5.1.5",
     "@types/jasminewd2": "~2.0.13",
-    "@types/node": "~20.14.9",
-    "@typescript-eslint/eslint-plugin": "^6.21.0",
-    "@typescript-eslint/parser": "^6.21.0",
-    "codelyzer": "^6.0.2",
+    "@types/node": "~20.14.15",
+    "@typescript-eslint/eslint-plugin": "^8.16.0",
+    "@typescript-eslint/parser": "^8.16.0",
+    "codelyzer": "^0.0.28",
     "copyfiles": "~2.4.1",
     "cross-var": "~1.1.0",
-    "eslint": "^8.57.0",
-    "jasmine": "~5.1.0",
-    "jasmine-core": "~5.1.2",
+    "eslint": "^9.16.0",
+    "jasmine": "~5.4.0",
+    "jasmine-core": "~5.4.0",
     "jasmine-spec-reporter": "~7.0.0",
     "jasminewd2": "~2.2.0",
-    "karma": "~6.4.3",
+    "karma": "~6.4.4",
     "karma-chrome-launcher": "~3.2.0",
     "karma-cli": "~2.0.0",
     "karma-coverage": "~2.2.0",
@@ -87,9 +87,9 @@
     "karma-jasmine-html-reporter": "~2.1.0",
     "karma-junit-reporter": "~2.0.1",
     "karma-spec-reporter": "~0.0.36",
-    "ng-packagr": "^18.0.0",
-    "puppeteer": "~22.12.1",
+    "ng-packagr": "^18.2.1",
+    "puppeteer": "~23.9.0",
     "ts-node": "~10.9.2",
-    "typescript": "~5.4.5"
+    "typescript": "~5.5.4"
   }
 }
