--- a/centeractive.koia.e2etest.yml
+++ b/centeractive.koia.e2etest.yml
@@ -24,7 +24,7 @@ steps:
 
 - task: NodeTool@0
   inputs:
-    versionSpec: '16.x'
+    versionSpec: '20.x'
   displayName: 'install Node.js'
 
 - task: PowerShell@2
@@ -47,7 +47,7 @@ steps:
 
 # perform unit-tets and publish test and code coverage results
 - script: |
-    npm ci -g @angular/cli@14.2.5
+    npm ci -g @angular/cli@latest
     npm ci
   displayName: 'install npm packages'
 
@@ -73,7 +73,7 @@ steps:
     releaseType: stable
     
 - script: |
-    docker run -p 5984:5984 --name couchdb -v ${HOME}/couchdb/etc/local.d:/opt/couchdb/etc/local.d -d couchdb:3.2.2
+    docker run -p 5984:5984 --name couchdb -v ${HOME}/couchdb/etc/local.d:/opt/couchdb/etc/local.d -d couchdb:3.4.2
   displayName: 'run CouchDB in Docker container'
 
 # perform unit-tets and publish test and code coverage results
