Feature #4023: distinct chart scales for data columns

--- a/angular.json
+++ b/angular.json
@@ -94,6 +94,9 @@
           "builder": "@angular-devkit/build-angular:karma",
           "options": {
             "karmaConfig": "./karma.conf.js",
+            "codeCoverageExclude": [
+              "src/app/testing/**"
+            ],
             "polyfills": [
               "zone.js",
               "zone.js/testing"
