updated diverse libraries

--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "build:prod:tomcat": "ng build --configuration production --base-href /koia/",
-    "build:prod:apache": "ng build --configuration production",
+    "build:prod": "ng build --configuration production",
     "test": "ng test --watch=true --source-map=true --browsers=ChromeHeadless --code-coverage=true",
     "test-debug": "ng test --browsers=ChromeDebug",
     "test-headless": "ng test --watch=true --source-map=true --browsers=ChromeHeadless",
@@ -20,30 +19,30 @@
   },
   "private": true,
   "dependencies": {
-    "@angular-slider/ngx-slider": "^18.0.0",
-    "@angular/animations": "^19.0.5",
-    "@angular/cdk": "^19.0.4",
-    "@angular/common": "^19.0.5",
-    "@angular/compiler": "^19.0.5",
-    "@angular/core": "^19.0.5",
-    "@angular/forms": "^19.0.5",
-    "@angular/material": "^19.0.4",
-    "@angular/platform-browser": "^19.0.5",
-    "@angular/platform-browser-dynamic": "^19.0.5",
-    "@angular/platform-server": "^19.0.5",
-    "@angular/router": "^19.0.5",
+    "@angular-slider/ngx-slider": "^19.0.0",
+    "@angular/animations": "^19.2.12",
+    "@angular/cdk": "^19.2.17",
+    "@angular/common": "^19.2.12",
+    "@angular/compiler": "^19.2.12",
+    "@angular/core": "^19.2.12",
+    "@angular/forms": "^19.1.5",
+    "@angular/material": "^19.2.17",
+    "@angular/platform-browser": "^19.2.12",
+    "@angular/platform-browser-dynamic": "^19.2.12",
+    "@angular/platform-server": "^19.2.12",
+    "@angular/router": "^19.2.12",
     "@e965/xlsx": "0.20.3",
     "@types/d3": "~7.4.3",
     "@types/file-saver": "~2.0.7",
-    "@types/luxon": "^3.4.2",
+    "@types/luxon": "^3.6.2",
     "@types/pouchdb": "~6.4.2",
     "angular-resizable-element": "~7.0.2",
-    "chart.js": "~4.4.7",
+    "chart.js": "~4.4.9",
     "chartjs-adapter-luxon": "^1.3.1",
     "chartjs-plugin-datalabels": "~2.2.0",
     "d3": "~7.9.0",
     "d3fc-sample": "~3.0.5",
-    "data-forge": "~1.10.2",
+    "data-forge": "~1.10.4",
     "extract-zip": "~2.0.1",
     "file-saver": "~2.0.5",
     "jquery": "~3.7.1",
@@ -51,7 +50,7 @@
     "lodash": "^4.17.21",
     "luxon": "^3.4.4",
     "oboe": "~2.1.7",
-    "papaparse": "~5.4.1",
+    "papaparse": "~5.5.2",
     "pivottable": "~2.23.0",
     "pouchdb": "~9.0.0",
     "pouchdb-find": "~9.0.0",
@@ -62,20 +61,20 @@
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^19.0.6",
-    "@angular/cli": "^19.0.6",
-    "@angular/compiler-cli": "^19.0.5",
-    "@angular/localize": "^19.0.5",
-    "@types/jasmine": "~5.1.5",
+    "@angular-devkit/build-angular": "^19.2.13",
+    "@angular/cli": "^19.2.13",
+    "@angular/compiler-cli": "^19.2.12",
+    "@angular/localize": "^19.2.12",
+    "@types/jasmine": "~5.1.8",
     "@types/jasminewd2": "~2.0.13",
     "@types/node": "~20.14.15",
-    "@typescript-eslint/eslint-plugin": "^8.18.1",
-    "@typescript-eslint/parser": "^8.18.1",
+    "@typescript-eslint/eslint-plugin": "^8.32.1",
+    "@typescript-eslint/parser": "^8.32.1",
     "copyfiles": "~2.4.1",
     "cross-var": "~1.1.0",
-    "eslint": "^9.17.0",
-    "jasmine": "~5.5.0",
-    "jasmine-core": "~5.5.0",
+    "eslint": "^9.27.0",
+    "jasmine": "~5.7.1",
+    "jasmine-core": "~5.7.1",
     "jasmine-spec-reporter": "~7.0.0",
     "jasminewd2": "~2.2.0",
     "karma": "~6.4.4",
@@ -86,8 +85,8 @@
     "karma-jasmine-html-reporter": "~2.1.0",
     "karma-junit-reporter": "~2.0.1",
     "karma-spec-reporter": "~0.0.36",
-    "ng-packagr": "^19.0.1",
-    "puppeteer": "~23.11.1",
+    "ng-packagr": "^19.1.2",
+    "puppeteer": "~24.9.0",
     "ts-node": "~10.9.2",
     "typescript": "~5.6.3"
   }
