--- a/package.json
+++ b/package.json
@@ -19,17 +19,17 @@
   },
   "private": true,
   "dependencies": {
-    "@angular-slider/ngx-slider": "^20.0.0",
-    "@angular/cdk": "^20.2.10",
-    "@angular/common": "^20.3.7",
-    "@angular/compiler": "^20.3.7",
-    "@angular/core": "^20.3.7",
-    "@angular/forms": "^20.3.7",
-    "@angular/material": "^20.2.10",
-    "@angular/platform-browser": "^20.3.7",
-    "@angular/platform-browser-dynamic": "^20.3.7",
-    "@angular/platform-server": "^20.3.7",
-    "@angular/router": "^20.3.7",
+    "@angular-slider/ngx-slider": "^21.0.0",
+    "@angular/cdk": "^21.0.3",
+    "@angular/common": "^21.0.5",
+    "@angular/compiler": "^21.0.5",
+    "@angular/core": "^21.0.5",
+    "@angular/forms": "^21.0.5",
+    "@angular/material": "^21.0.3",
+    "@angular/platform-browser": "^21.0.5",
+    "@angular/platform-browser-dynamic": "^21.0.5",
+    "@angular/platform-server": "^21.0.5",
+    "@angular/router": "^21.0.5",
     "@e965/xlsx": "0.20.3",
     "@types/d3": "~7.4.3",
     "@types/file-saver": "~2.0.7",
@@ -42,6 +42,7 @@
     "d3": "~7.9.0",
     "d3fc-sample": "~3.0.5",
     "data-forge": "~1.10.4",
+    "events": "^3.3.0",
     "extract-zip": "~2.0.1",
     "file-saver": "~2.0.5",
     "jquery": "~3.7.1",
@@ -60,20 +61,20 @@
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^20.3.7",
-    "@angular/cli": "^20.3.7",
-    "@angular/compiler-cli": "^20.3.7",
-    "@angular/localize": "^20.3.7",
-    "@types/jasmine": "~5.1.12",
+    "@angular/build": "^21.0.3",
+    "@angular/cli": "^21.0.3",
+    "@angular/compiler-cli": "^21.0.5",
+    "@angular/localize": "^21.0.5",
+    "@types/jasmine": "~5.1.13",
     "@types/jasminewd2": "~2.0.13",
     "@types/node": "~22.9.0",
-    "@typescript-eslint/eslint-plugin": "^8.46.2",
-    "@typescript-eslint/parser": "^8.46.2",
+    "@typescript-eslint/eslint-plugin": "^8.49.0",
+    "@typescript-eslint/parser": "^8.49.0",
     "copyfiles": "~2.4.1",
     "cross-var": "~1.1.0",
-    "eslint": "^9.28.0",
-    "jasmine": "~5.12.0",
-    "jasmine-core": "~5.12.0",
+    "eslint": "^9.39.2",
+    "jasmine": "~5.13.0",
+    "jasmine-core": "~5.13.0",
     "jasmine-spec-reporter": "~7.0.0",
     "jasminewd2": "~2.2.0",
     "karma": "~6.4.4",
@@ -84,8 +85,9 @@
     "karma-jasmine-html-reporter": "~2.1.0",
     "karma-junit-reporter": "~2.0.1",
     "karma-spec-reporter": "~0.0.36",
-    "ng-packagr": "^20.3.0",
-    "puppeteer": "~24.26.1",
+    "less": "^4.2.0",
+    "ng-packagr": "^21.0.0",
+    "puppeteer": "~24.33.0",
     "ts-node": "~10.9.2",
     "typescript": "~5.9.3"
   }
